--- a/Medium.Api/appsettings.json
+++ b/Medium.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Medium;Trusted_Connection=True"
+    "DefaultConnection": "Server=TAHA-LABTOP\\SQL2019;Database=Medium;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
