--- a/Medium.Api/appsettings.json
+++ b/Medium.Api/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Medium;Trusted_Connection=True"
+    "DefaultConnection": "Server=.\\Sql2019;Database=Medium;Trusted_Connection=True"
+  },
+  "JWT": {
+    "ValidIssur": "http://localhost:44303", //proiveder
+    "ValidAudience": "http://localhost:4200", // url consumer
+    "Secret": "StrONGKAutHENTICATIONKEy"
   },
   "Logging": {
     "LogLevel": {
