--- a/Medium.Api/appsettings.json
+++ b/Medium.Api/appsettings.json
@@ -7,6 +7,12 @@
     "ValidAudience": "http://localhost:4200", // url consumer
     "Secret": "StrONGKAutHENTICATIONKEy"
   },
+  "Email": {
+    "port": "465",
+    "host": "smtp.gmail.com",
+    "fromEmail": "nadasaeed566@gmail.com",
+    "password": "lzwpqzydygrfffqe"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
