some fixes and seed roles and users

--- a/Medium.Api/Medium.Api.csproj
+++ b/Medium.Api/Medium.Api.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\Photos\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 
 </Project>
