change valid issuers in appsettings

--- a/Medium.Api/appsettings.json
+++ b/Medium.Api/appsettings.json
@@ -3,9 +3,14 @@
     "DefaultConnection": "Server=.\\Sql2019;Database=Medium;Trusted_Connection=True"
   },
   "JWT": {
-    "ValidIssur": "http://localhost:44303", //proiveder
+    "ValidIssur": "https://localhost:44303", //proiveder
     "ValidAudience": "http://localhost:4200", // url consumer
-    "Secret": "StrONGKAutHENTICATIONKEy"
+    "Secret": "StrONGKAutHENTICATIONKEy",
+    "ValidIssurs": [
+      "http://localhost:54092",
+      "https://localhost:44303",
+      "https://localhost:7123"
+    ]
   },
   "Email": {
     "port": "465",
