Add Confirm Email Services 😡😡😡

--- a/Medium.Api/appsettings.json
+++ b/Medium.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\Sql2019;Database=Medium;Trusted_Connection=True"
+    "DefaultConnection": "Server=.;Database=Medium;Trusted_Connection=True"
   },
   "JWT": {
     "ValidIssur": "https://localhost:44303", //proiveder
