return publisherId and publisherName and Photo in Get Sotry bu Id

--- a/Medium.Api/Medium.Api.csproj
+++ b/Medium.Api/Medium.Api.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Resources\" />
+    <Folder Include="Resources\StoryPhotos\" />
+    <Folder Include="wwwroot\Resources\StoryVideos\" />
+    <Folder Include="wwwroot\Resources\StoryPhotos\" />
   </ItemGroup>
 
 </Project>
