--- a/Medium.Api/appsettings.json
+++ b/Medium.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Medium;Trusted_Connection=True"
+    "DefaultConnection": "Server=.\\Sql2019;Database=Medium;Trusted_Connection=True"
+    //"DefaultConnection": "Server=SQL5110.site4now.net;Database=db_aa0fa6_medium;User Id=db_aa0fa6_medium_admin;Password=medium@123QWE"
   },
   "JWT": {
     "ValidIssur": "https://localhost:44303", //proiveder
